<resources xmlns:tools="http://schemas.android.com/tools">


    <string name="app_name">Skyeng Login</string>
    <string name="login">Вход</string>
    <string name="log_out">Выход</string>
    <string name="enter_code">Введите код</string>
    <string name="quit_question">Вы действительно хотите выйти?</string>
    <string name="enter_code_sended_on_email">Введите код (Отправлен на почту</string>

    <string name="cancel">Отмена</string>


    <string name="login_info">Войдите под вашим аккаунтом в школе Skyeng и получите доступ к мобильному личному кабинету</string>
    <string name="enter_code_phone">Введите код (отправлен на телефон +7920*****38).</string>


    <string name="email_address">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="get_key">Получить код для входа</string>
    <string name="enter">Войти</string>
    <string name="code">Код</string>
    <string name="logout">Выйти</string>
    <string name="enter_without_password">Войти без пароля</string>
    <string name="enter_with_password">Обычный вход с паролем</string>
    <string name="resend_code">Выслать код повторно</string>
    <string name="pass_not_easy">Сложный пароль или не хотите искать -\nиспользуйте вход без пароля.</string>
    <string name="pass_easy">Сложный пароль или не хотите искать -\nвойдите по коду. Или используйте обычный вход.</string>

    <string name="progress_login" tools:ignore="TypographyEllipsis">Выполняется вход.\nПодождите...</string>
    <string name="progress_ccde" tools:ignore="TypographyEllipsis">Отправка кода.\nПодождите...</string>

    <string name="internet_error">Не удалось подключиться. Проверьте интернет-соединение.</string>
    <string name="incorrect_login_or_password">Неверный адрес электронной почты или пароль</string>
    <string name="incorrect_login">Неверный адрес электронной</string>
    <string name="incorrect_code">Неверный код</string>

</resources>
