<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skyeng.skyengtest.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/login_info"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_default_size" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_default_size" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_default_size" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@drawable/button_click_background"
        android:enabled="false"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="@dimen/text_big_size" />

    <Button
        android:id="@+id/loginStateButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@null"
        android:text="@string/enter_without_password"
        android:textColor="@color/blue_light"
        android:textSize="@dimen/text_big_size" />

    <TextView
        android:id="@+id/passHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/big_margin"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/pass_not_easy"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_small_size" />

</LinearLayout>
